--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ body {
     height: 52px;
 }
 
+
 /* *Page 2 */
 /* @top content */
 .page2-content-top {
@@ -274,7 +275,6 @@ body {
 }
 
 
-
 /* *Page 3 */
 .page3-content {
     width: 1241.298828125px;
@@ -327,3 +327,107 @@ body {
 }
 
 
+/* *Page 4  */
+.page4-content {
+    width: 1440px;
+    height: 725px;
+    margin: 226px auto;
+    opacity: 1;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.page4-content-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+
+    width: 544px;
+    height: 500px;
+    opacity: 1;
+    padding: 0 63px;
+}
+
+.p4-c-r-top {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+
+    width: 318px;
+    height: 165px;
+    opacity: 1;
+    gap: 7px;
+}
+
+.p4-c-r-top h5 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.1px;
+}
+
+.p4-c-r-top h3 {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.2px;
+    padding: 10px 0;
+}
+
+.p4-c-r-mid h6 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.1px;
+}
+
+.p4-c-r-mid p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: 0.2px;
+}
+
+.p4-c-r-bottom {
+    display: flex;
+    align-items: center;
+    width: 460px;
+    height: 126px;
+    opacity: 1;
+    gap: 12px;
+    padding: 34px 0;
+}
+
+.p4-c-r-bottom input {
+    width: 273px;
+    opacity: 1;
+    padding: 19px 39px;
+    border-radius: 39px;
+    border: 1px #E8E8E8 solid;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.1px;
+}
+
+.p4-c-r-bottom button {
+    background-color: #2091F9;
+    color: white;
+    border: none;
+    width: 175px;
+    opacity: 1;
+    padding: 19px 38px;
+    border-radius: 35px;
+}
+
+.p4-c-r-bottom button {
+    font-weight: 700;
+    font-style: Bold;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+}
