--- a/styles.css
+++ b/styles.css
@@ -239,18 +239,17 @@ body {
     height: 762.30322265625px;
     opacity: 1;
     gap: 59.07px;
-    padding-top: 52px;
-    padding-bottom: 52px;
+    padding: 52px 40px;
     margin: auto;
     overflow: hidden;
 }
-
 .page2-content-bottom img {
     width: 1177.3414306640625px;
     height: 658.30322265625px;
     opacity: 1;
-    border-radius: 81.48px;
+    border-radius: 44.81px;
     display: block;
+    box-shadow: 0px 8.15px 63.14px 0px #00000026;
 }
 
 .play-btn {
